force-app/main/default/objects/CustomerEnquiryProduct__c/CustomerEnquiryProduct__c.object-meta.xml
<CustomObject>
    <label>Customer Enquiry Product</label>
    <nameField>
        <label>Customer Enquiry Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Enquiry Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>