force-app/main/default/objects/CustomerEnquiryProduct__c/fields/CustomerEnquiryId__c.field-meta.xml
<CustomField>
    <fullName>CustomerEnquiryId__c</fullName>
    <label>Customer Enquiry</label>
    <referenceTo>CustomerEnquiry__c</referenceTo>
    <relationshipLabel>Customer Enquiry Products</relationshipLabel>
    <relationshipName>Customer_Enquiry_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>