force-app/main/default/objects/CustomerEnquiryProduct__c/fields/MeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasurementUnit__c</fullName>
    <description>Measurement unit</description>
    <inlineHelpText>Unit of measure for the product</inlineHelpText>
    <label>Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>34</fullName>
                <label>t</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>m</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>ft</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>pcs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>