force-app/main/default/objects/CustomerEnquiryProduct__c/fields/OpportunityProductId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related opportunity product.</description>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Customer Enquiry Products</relationshipLabel>
    <relationshipName>Customer_Enquiry_Products</relationshipName>
    <type>Lookup</type>
</CustomField>