force-app/main/default/objects/CustomerEnquiryProduct__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price for the selected unit of measure.</description>
    <inlineHelpText>Price for the selected unit of measure.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>