force-app/main/default/objects/CustomerEnquiryProduct__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Enquiry Products</relationshipLabel>
    <relationshipName>Customer_Enquiry_Products</relationshipName>
    <type>Lookup</type>
</CustomField>