force-app/main/default/objects/CustomerEnquiryProduct__c/fields/Quantity_t__c.field-meta.xml
<CustomField>
    <fullName>Quantity_t__c</fullName>
    <description>Quantity of the product in metric tons.</description>
    <inlineHelpText>Quantity of the product in metric tons.</inlineHelpText>
    <label>Quantity (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>