force-app/main/default/objects/CustomerEnquiryProduct__c/recordTypes/Tube.recordType-meta.xml
<RecordType>
    <fullName>Tube</fullName>
    <active>true</active>
    <description>Tubular product (pipe, coupling, joint, etc.)</description>
    <label>Tube</label>
</RecordType>