force-app/main/default/objects/CustomerEnquiryProduct__c/recordTypes/Wheel.recordType-meta.xml
<RecordType>
    <fullName>Wheel</fullName>
    <active>true</active>
    <description>Railway product (wheel, axle, wheel set, etc.)</description>
    <label>Wheel</label>
</RecordType>